kubernetes/apps/ai/laya/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: laya
  namespace: ai
  labels:
    app.kubernetes.io/name: laya
spec:
  selector:
    app.kubernetes.io/name: laya
  ports:
    - name: http
      port: 8000
      targetPort: http
